testdata/baselines/reference/submodule/conformance/tsxStatelessFunctionComponentsWithTypeArguments2.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
file.tsx(3,78): error TS2503: Cannot find namespace 'JSX'.
file.tsx(4,55): error TS2503: Cannot find namespace 'JSX'.
file.tsx(16,54): error TS2503: Cannot find namespace 'JSX'.
file.tsx(24,13): error TS2304: Cannot find name 'Array'.
file.tsx(28,67): error TS2503: Cannot find namespace 'JSX'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (6 errors) ====
    import React = require('react')
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    declare function ComponentSpecific1<U>(l: {prop: U, "ignore-prop": string}): JSX.Element;
                                                                                 ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    declare function ComponentSpecific2<U>(l: {prop: U}): JSX.Element;
                                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    // Error
    function Bar<T extends {prop: number}>(arg: T) {
        let a1 = <ComponentSpecific1 {...arg} ignore-prop={10} />;
     }
    
    // Error
    function Baz<T>(arg: T) {
        let a0 = <ComponentSpecific1 {...arg} />
    }
    
    declare function Link<U>(l: {func: (arg: U)=>void}): JSX.Element;
                                                         ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    // Error
    function createLink(func: (a: number, b: string)=>void) {
        let o = <Link func={func} />
    }
    
    interface InferParamProp<T> {
        values: Array<T>;
                ~~~~~
!!! error TS2304: Cannot find name 'Array'.
        selectHandler: (selectedVal: T) => void;
    }
    
    declare function InferParamComponent<T>(attr: InferParamProp<T>): JSX.Element;
                                                                      ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    // Error
    let i = <InferParamComponent values={[1, 2, 3, 4]} selectHandler={(val: string) => { }} />;
    